scripts/templates/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${PROJECT_NAME}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      containers:
        - name: app
          image: registry.dev.local/${PROJECT_NAME}/${APP_NAME}:0.0.0
          ports:
          - containerPort: 8090
            protocol: TCP
            name: web
      imagePullSecrets:
      - name: ${APP_NAME}-regcred
...
