scripts/templates/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${PROJECT_NAME}
spec:
  selector:
    app: ${APP_NAME}
  ports:
  - name: web
    port: 8090
    protocol: TCP
...
