scripts/templates/manifests/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP_NAME}-ingress
  namespace: app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-ingress"
spec:
  entryPoints:
  - websecure
  routes:
    - kind: Rule
      match: Host(`${APP_NAME}.app.dev.local`) && PathPrefix(`/`)
      services:
      - name: ${APP_NAME}-service
        namespace: ${PROJECT_NAME}
        port: web
  tls:
    domains:
    - main: ${APP_NAME}.app.dev.local
    secretName: ${APP_NAME}-app-cert
...
